feat: expand merchant print API
